hphp/hack/test/typecheck/expression_trees/boolean_check.php.exp
File "boolean_check.php", line 27, characters 11-25:
You are trying to access the method `__bool` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 7, characters 54-65:
  This can be null
File "boolean_check.php", line 28, characters 11-25:
You are trying to access the method `__bool` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 7, characters 54-65:
  This can be null
File "boolean_check.php", line 34, characters 16-30:
You are trying to access the method `__bool` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 7, characters 54-65:
  This can be null
File "boolean_check.php", line 37, characters 16-30:
You are trying to access the method `__bool` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 7, characters 54-65:
  This can be null
File "boolean_check.php", line 45, characters 13-27:
You are trying to access the method `__bool` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 7, characters 54-65:
  This can be null
File "boolean_check.php", line 48, characters 13-27:
You are trying to access the method `__bool` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 7, characters 54-65:
  This can be null
File "boolean_check.php", line 49, characters 20-34:
You are trying to access the method `__bool` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 7, characters 54-65:
  This can be null
File "boolean_check.php", line 50, characters 14-28:
You are trying to access the method `__bool` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 7, characters 54-65:
  This can be null
File "boolean_check.php", line 51, characters 20-34:
You are trying to access the method `__bool` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 7, characters 54-65:
  This can be null
File "boolean_check.php", line 59, characters 7-21:
You are trying to access the method `__bool` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 7, characters 54-65:
  This can be null
File "boolean_check.php", line 62, characters 7-18:
`ExampleString` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
